2025-02-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-enabled)
	(tramp-test03-file-name-host-rules): Don't wrap
	`tramp-cleanup-connection' with `ignore-errors'.

2025-02-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (top): Set `vc-handled-backends' to nil.
	(tramp--test-enabled): Rearrange code.

2024-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test39-make-lock-file-name): Adapt test.
	(tramp-test42-utf8): Do not run expensive tests on MS Windows.

2024-12-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (ert-batch-backtrace-right-margin): Set it to nil.
	(tramp--test-enabled): Fix regexps.

2024-11-30  Michael Albinus  <michael.albinus@gmx.de>

	* README: Mark, what's not available on GNU ELPA.

2024-11-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test47-read-password)
	(tramp-test47-read-otp-password, tramp-test47-read-fingerprint):
	Use `tramp-default-remote-shell' and
	`tramp-connection-properties'.  Cleanup at the end.
	(tramp-test47-read-security-key): New test.

2024-11-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test47-read-fingerprint): New test.

2024-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* README: More details added.

	* tramp-tests.el (Commentary): Extend.
	(tramp--test-enabled): Exclude also old FUSE mount points from
	deletion.

2024-11-15  Michael Albinus  <michael.albinus@gmx.de>

	* README: Explain removal of temp files.

	* tramp-tests.el (tramp-test-name-prefix): New defconst.
	(tramp--test-make-temp-name, tramp-test40-make-nearby-temp-file)
	(tramp-test47-read-password, tramp-test47-read-otp-password):
	Use it.
	(tramp--test-enabled-checked): Move down.
	(tramp--test-enabled): Delete all Tramp temp files when
	environment variable $TRAMP_TEST_CLEANUP_TEMP_FILES is set.
	(tramp-test02-file-name-dissect-separate):
	Adapt `tramp-crypt-directories' according to syntax.